--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "chatketan",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "mongoose": "^7.0.1",
+    "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KETAN120901/chatketan.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KETAN120901/chatketan/issues"
+  },
+  "homepage": "https://github.com/KETAN120901/chatketan#readme",
+  "description": ""
 }
